--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "angular-library-starter-kit",
-  "description": "Angular 5 Library Starter Kit",
+  "name": "contact-picker-widget-angular",
+  "description": "Contact Picker Smart Widget UI (Angular)",
   "author": {
-    "name": "Gerard Rovira Sánchez",
-    "email": "zurfyx@gmail.com",
-    "url": "zurfyx.com"
+    "name": "Joeri Sebrechts",
+    "email": "joeri.sebrechts@digipolis.be"
   },
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "main": "src/index.ts",
   "scripts": {
     "start": "ng serve --aot",
     "build": "ng-packagr -p ng-package.json",
-    "build-ghpages": "ng build --base-href \"https://zurfyx.github.io/angular-library-starter-kit/\" --output-path \"dist-ghpages\"",
+    "build-ghpages": "ng build --base-href \"https://digipolisantwerp.github.io/contact-picker-widget-angular/\" --output-path \"dist-ghpages\"",
     "test": "npm run lint && ng test --watch false --code-coverage",
     "test-watch": "ng test --code-coverage",
     "e2e": "ng e2e",
@@ -21,12 +20,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zurfyx/angular-library-starter-kit.git"
+    "url": "git+https://github.com/digipolisantwerp/contact-picker-widget-angular.git"
   },
   "bugs": {
-    "url": "https://github.com/zurfyx/angular-library-starter-kit/issues"
+    "url": "https://github.com/digipolisantwerp/contact-picker-widget-angular/issues"
   },
-  "homepage": "https://github.com/zurfyx/angular-library-starter-kit#readme",
+  "homepage": "https://github.com/digipolisantwerp/contact-picker-widget-angular#readme",
   "keywords": [
     "angular",
     "library",
