--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "ng serve --aot",
-    "build": "ng-packagr -p ng-package.json",
+    "build": "npm run clean && ng-packagr -p ng-package.json",
     "build-ghpages": "ng build --base-href \"https://digipolisantwerp.github.io/contact-picker_widget_angular/\" --output-path \"dist-ghpages\"",
+    "clean": "rimraf dist",
     "test": "npm run lint && ng test --watch false --code-coverage",
     "test-watch": "ng test --code-coverage",
     "e2e": "ng e2e",
@@ -72,6 +73,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^1.5.0-rc.1",
     "protractor": "~5.1.2",
+    "rimraf": "^2.6.2",
     "rxjs": "^5.5.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
@@ -80,6 +82,6 @@
     "zone.js": "^0.8.14"
   },
   "publishConfig": {
-    "registry": "https://nexusrepo.antwerpen.be/repository/npm-private"
+    "registry": "https://nexusrepo.antwerpen.be/repository/npm-private/"
   }
 }
