--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   ],
   "peerDependencies": {
     "@angular/common": "^5.0.0",
-    "@angular/core": "^5.0.0"
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0"
   },
   "dependencies": {
     "@acpaas-ui/auto-complete": "^4.0.0"
@@ -51,7 +52,6 @@
     "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
