--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "name": "Joeri Sebrechts",
     "email": "joeri.sebrechts@digipolis.be"
   },
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "main": "src/index.ts",
   "scripts": {
@@ -41,10 +41,13 @@
     "@angular/forms": "^5.0.0"
   },
   "dependencies": {
-    "@acpaas-ui/auto-complete": "^4.0.0"
+    "@acpaas-ui/auto-complete": "^4.0.2"
   },
   "devDependencies": {
     "@a-ui/core": "^2.0.3",
+    "@acpaas-ui/flyout": "^4.0.2",
+    "@acpaas-ui/mask": "^4.0.0",
+    "@acpaas-ui/selectable-list": "^3.0.1",
     "@angular/animations": "^5.0.0",
     "@angular/cli": "1.7.3",
     "@angular/common": "^5.0.0",
@@ -69,11 +72,12 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^1.5.0-rc.1",
+    "ng-packagr": "^2.4.2",
     "protractor": "~5.1.2",
     "rimraf": "^2.6.2",
     "rxjs": "^5.5.2",
     "ts-node": "~3.2.0",
+    "tsickle": "^0.27.5",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2",
     "watch": "^1.0.2",
