--- a/package.json
+++ b/package.json
@@ -36,32 +36,35 @@
     "ng-packagr"
   ],
   "peerDependencies": {
-    "@angular/common": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@acpaas-ui/ngx-components": "^3.0.0"
+    "@angular/common": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@acpaas-ui/ngx-forms": "^4.2.0",
+    "@acpaas-ui/ngx-utils": "^4.2.1"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "@a-ui/core": "~4.1.0",
     "@a-ui/flexboxgrid": "~1.0.1",
-    "@acpaas-ui/ngx-components": "^3.0.0",
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/animations": "6.1.9",
-    "@angular/cli": "^6.2.3",
-    "@angular/common": "6.1.9",
-    "@angular/compiler": "6.1.9",
-    "@angular/compiler-cli": "6.1.9",
-    "@angular/core": "6.1.9",
-    "@angular/forms": "6.1.9",
-    "@angular/language-service": "6.1.9",
-    "@angular/platform-browser": "6.1.9",
-    "@angular/platform-browser-dynamic": "6.1.9",
-    "@angular/router": "6.1.9",
+    "@acpaas-ui/ngx-forms": "^4.2.0",
+    "@acpaas-ui/ngx-utils": "^4.2.1",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular/animations": "8.2.14",
+    "@angular/cli": "^8.3.29",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/language-service": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.4",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.4.4",
+    "codelyzer": "^5.0.1",
     "core-js": "^2.5.7",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -71,16 +74,17 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "~0.2.2",
-    "ng-packagr": "~4.2.0",
+    "ng-packagr": "^5.4.0",
     "protractor": "~5.4.0",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.6.2",
     "rxjs-compat": "^6.3.3",
     "ts-node": "~7.0.0",
-    "tsickle": "~0.32.1",
+    "tsickle": "^0.37.0",
+    "tslib": "^1.10.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2",
+    "typescript": "~3.5.3",
     "watch": "^1.0.2",
-    "zone.js": "^0.8.26"
+    "zone.js": "~0.9.1"
   }
 }
