--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "ng-packagr"
   ],
   "peerDependencies": {
-    "@angular/common": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@acpaas-ui/ngx-forms": "^4.2.0",
+    "@angular/common": "^8.2.0",
+    "@angular/core": "^8.2.0",
+    "@angular/forms": "^8.2.0",
+    "@acpaas-ui/ngx-forms": "^4.2.2",
     "@acpaas-ui/ngx-utils": "^4.2.1"
   },
   "dependencies": {},
