--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ addons:
   chrome: stable
 language: node_js
 node_js:
-  - "lts/carbon"
+  - "lts/erbium"
 
 before_install:
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
